# HackerOS-Connect

./: Cargo.toml  README.adoc  README.md
android/: Cargo.toml  pubspec.yaml
android/android/app/: build.gradle.kts
android/lib/: main.dart
android/src/: lib.rs  main.rs
android/ui/: ui.slint
desktop/: Cargo.toml  index.html  main.js  package.json  preload.js  pubspec.yaml  renderer.js  styles.css
desktop/lib/: main.dart
source-code/: pubspec.yaml
source-code/lib/: main.dart
src/: main.rs  ui.slint
