[package]
name = "hackeros_connect"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "hackeros_connect"
path = "src/main.rs"

[dependencies]
slint = "1.13.1"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
local-ip-address = "0.6.3"
rand = "0.8.5"
whoami = "1.5.2"

[build-dependencies]
slint-build = "1.13.1"
