[package]
name = "hackeros_connect"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.8", features = ["backend-android-activity-06"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
whoami = "1.5"

[build-dependencies]
slint-build = "1.8"

[package.metadata.android]
resources = "res"

[package.metadata.android.application]
label = "Hackeros Connect"
icon = "@mipmap/ic_launcher"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_NETWORK_STATE"

[[package.metadata.android.uses_permission]]
name = "android.permission.ACCESS_WIFI_STATE"

