[package]
name = "hackeros-connect"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
local-ip-address = "0.6"
whoami = "1.5"

[build-dependencies]
slint-build = "1.8"
